--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="col-sm-5">
             <h6>&rarr; Things I Have Experience On</h6>
             <p>I've been doing web development for more than 3 years.
-              I always try to keep up the with the pace of advanced technologies.</p>
+              I always try to keep up with the pace of advanced technologies.</p>
             <div class="technologies">
               <i class="fa-brands fa-html5"></i>
               <i class="fa-brands fa-css3-alt"></i>
@@ -215,8 +215,8 @@
                         </div>
 
                         <div class="page-descp">
-                          <p>A furnite website landing page. Users can view
-                            products details, client reviews and others.</p>
+                          <p>A furniture website landing page. Users can view
+                            products details, client reviews, and others.</p>
                         </div>
                       </div>
                     </div>
@@ -240,7 +240,7 @@
 
                         <div class="page-descp">
                           <p>A travel booking website landing page. Users can view
-                            tourist destination details, client reviews and others. Some amazing examples of travel websites are 
+                            tourist destination details, client reviews, and others. Some amazing examples of travel websites are 
                             collected from the global community of designers.</p>
                         </div>
                       </div>
@@ -250,6 +250,7 @@
               </div>
 
               <div class="project">
+                <a href = "https://israt-svg.github.io/ems-system/">
                 <div class="card" style="width: 100%; background-color: transparent; color: white; padding: 10px;">
                   <div class="row">
                     <div class="col-sm-4">
@@ -263,12 +264,13 @@
                       </div>
 
                       <div class="page-descp">
-                        <p>A furnite website landing page. Users can view
-                          products details, client reviews and others.</p>
+                        <p>A Employee Management System Web Application Landing Page. It mainly shows the features the system will contain. 
+                          Also, there is a vacancy announcement system. This website may serve both purposes.</p>
                       </div>
                     </div>
                   </div>
                 </div>
+                </a>
               </div>
 
               <div class="project">
@@ -285,8 +287,8 @@
                         </div>
 
                         <div class="page-descp">
-                          <p>A furnite website landing page. Users can view
-                            products details, client reviews and others.</p>
+                          <p>A Blogging Page Website. It's mainly the landing page. 
+                            It visuals what a blog website mainly looks like. This website is mainly a remake of the <bold>HerPaperRoute</bold> website.</p>
                         </div>
                       </div>
                     </div>
