--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                 DEVELOPMENT
               </div>
               <div class="service-descp">
-                <P>Design isn't just what a product looks like and feels like on the outside.
-                  Design encompasses the internal functionality of a product as well as the overall user
-                  experience. I strive to design interfaces and experiences that people can enjoy on all
-                  digital mediums. </P>
+                <P>Designing isn't the whole process of a web application. For Development I have learnt traditional method 
+                  at first, which was encompased by PHP and MySQL. But nowadays, these traditional methods are outdated. I have learnt
+                   advanced method for web development, which is Laravel Framework. It's very popular nowadays.
+                   </P>
               </div>
             </div>
             <div class="col-sm-4">
@@ -167,10 +167,10 @@
                 PRACTISING
               </div>
               <div class="service-descp">
-                <P>Design isn't just what a product looks like and feels like on the outside.
-                  Design encompasses the internal functionality of a product as well as the overall user
-                  experience. I strive to design interfaces and experiences that people can enjoy on all
-                  digital mediums. </P>
+                <P>Initially Front end designing was fun. But As I started doing complicated projects, 
+                  I get stucked daily. No matter what after learning everything at some point I 
+                  realized that making projects is important. I can to check 
+                  how HTML and CSS work together to design a beautiful frontend application.</P>
               </div>
             </div>
           </div>
@@ -216,7 +216,7 @@
 
                         <div class="page-descp">
                           <p>A furniture website landing page. Users can view
-                            products details, client reviews, and others.</p>
+                            products details, client reviews, and others. Its designed from Figma.</p>
                         </div>
                       </div>
                     </div>
@@ -240,8 +240,8 @@
 
                         <div class="page-descp">
                           <p>A travel booking website landing page. Users can view
-                            tourist destination details, client reviews, and others. Some amazing examples of travel websites are 
-                            collected from the global community of designers.</p>
+                            tourist destination details and client reviews. Some amazing ideas are 
+                            collected from the global community of designers. Its designed from Figma.</p>
                         </div>
                       </div>
                     </div>
@@ -264,8 +264,8 @@
                       </div>
 
                       <div class="page-descp">
-                        <p>A Employee Management System Web Application Landing Page. It mainly shows the features the system will contain. 
-                          Also, there is a vacancy announcement system. This website may serve both purposes.</p>
+                        <p>A Employee Management System Web Application Landing Page. 
+                          Also, there is a vacancy announcement system. This website may serve both purposes. It was designed for one of my university courses.</p>
                       </div>
                     </div>
                   </div>
@@ -288,7 +288,7 @@
 
                         <div class="page-descp">
                           <p>A Blogging Page Website. It's mainly the landing page. 
-                            It visuals what a blog website mainly looks like. This website is mainly a remake of the <bold>HerPaperRoute</bold> website.</p>
+                           This website is mainly a remake of the <bold>HerPaperRoute</bold> website.</p>
                         </div>
                       </div>
                     </div>
