--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
               </div>
               <div class="service-descp">
                 <P>Designing isn't the whole process of a web application. For Development I have learnt traditional method 
-                  at first, which was encompased by PHP and MySQL. But nowadays, these traditional methods are outdated. I have learnt
-                   advanced method for web development, which is Laravel Framework. It's very popular nowadays.
+                  at first, which was encompased by PHP and MySQL. But nowadays, these traditional methods are outdated. As a result, I have learnt
+                  Laravel Framework. It's very popular nowadays.
                    </P>
               </div>
             </div>
