--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 front-end design, but I am compatable with both designing and development.</p>
               <p>For my practice, I have re-designed several websites, and for interface design concept, I prefer using
                 the templates from
-                Themeforest, Figma, Jutinmind and others.</p>
+                Themeforest, Figma, Justinmind and others.</p>
               <p>Few months ago, I have completed a Govt. funded course from BITM, on PHP with Laravel
                 Framework. Currently my focus is to get involved with the projects that are built on Laravel framework.
               </p>
