--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
 
                       <div class="page-descp">
                         <p>A Employee Management System Web Application Landing Page. 
-                          Also, there is a vacancy announcement system. This website may serve both purposes. It was designed for one of my university courses.</p>
+                          Also, there is a vacancy announcement system. This website may serve both purposes. 
+                          It was designed for one of my university courses.</p>
                       </div>
                     </div>
                   </div>
@@ -288,7 +289,7 @@
 
                         <div class="page-descp">
                           <p>A Blogging Page Website. It's mainly the landing page. 
-                           This website is mainly a remake of the <bold>HerPaperRoute</bold> website.</p>
+                           This website is mainly a remake of the <strong>HerPaperRoute</strong> website.</p>
                         </div>
                       </div>
                     </div>
