--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="short-intro">
               <p>
-                I am a Chattogram based web developer who specializes in building websites that gives
+                I am a Chattogram-based web developer who specializes in building websites that give
                 user-friendly interfaces. I mainly develop websites using PHP and Laravel Framework.
               </p>
             </div>
@@ -110,15 +110,15 @@
             <div class="about">
               <h4>A Little About Me</h4>
               <p>Hey, I am Israt. I have completed my graduation on <strong>CSE</strong>(Computer Science &
-                Engingeering)
+                Engineering)
                 from <strong>International Islamic University Chittagong</strong>. I am a web developer with a passion
                 for
-                front-end design, but I am compatable with both designing and development.</p>
-              <p>For my practice, I have re-designed several websites, and for interface design concept, I prefer using
+                front-end design, but I am compatible with both design and development.</p>
+              <p>For my practice, I have re-designed several websites, and for interface design concepts, I prefer using
                 the templates from
-                Themeforest, Figma, Justinmind and others.</p>
-              <p>Few months ago, I have completed a Govt. funded course from BITM, on PHP with Laravel
-                Framework. Currently my focus is to get involved with the projects that are built on Laravel framework.
+                Themeforest, Figma, Justinmind, and others.</p>
+              <p> Few months ago, I completed a Govt. funded course from BITM, on PHP with Laravel
+                Framework. Currently, my focus is to get involved with projects that are built on the Laravel framework.
               </p>
             </div>
 
@@ -153,8 +153,8 @@
                 DEVELOPMENT
               </div>
               <div class="service-descp">
-                <P>Designing isn't the whole process of a web application. For Development I have learnt traditional method 
-                  at first, which was encompased by PHP and MySQL. But nowadays, these traditional methods are outdated. As a result, I have learnt
+                <P>Designing isn't the whole process of a web application. For Development I have learned the traditional method 
+                  at first, which was encompassed by PHP and MySQL. But nowadays, these traditional methods are outdated. As a result, I have learnt
                   Laravel Framework. It's very popular nowadays.
                    </P>
               </div>
@@ -168,7 +168,7 @@
               </div>
               <div class="service-descp">
                 <P>Initially Front end designing was fun. But As I started doing complicated projects, 
-                  I get stucked daily. No matter what after learning everything at some point I 
+                  I get stuck daily. No matter what after learning everything at some point I 
                   realized that making projects is important. I can to check 
                   how HTML and CSS work together to design a beautiful frontend application.</P>
               </div>
@@ -216,7 +216,7 @@
 
                         <div class="page-descp">
                           <p>A furniture website landing page. Users can view
-                            products details, client reviews, and others. Its designed from Figma.</p>
+                            product details, client reviews, and others. It's designed from Figma.</p>
                         </div>
                       </div>
                     </div>
@@ -241,7 +241,7 @@
                         <div class="page-descp">
                           <p>A travel booking website landing page. Users can view
                             tourist destination details and client reviews. Some amazing ideas are 
-                            collected from the global community of designers. Its designed from Figma.</p>
+                            collected from the global community of designers. It's designed from Figma.</p>
                         </div>
                       </div>
                     </div>
@@ -264,8 +264,8 @@
                       </div>
 
                       <div class="page-descp">
-                        <p>A Employee Management System Web Application Landing Page. 
-                          Also, there is a vacancy announcement system. This website may serve both purposes. 
+                        <p>An Employee Management System Web Application Landing Page. 
+                          It also contains a vacancy announcement system. 
                           It was designed for one of my university courses.</p>
                       </div>
                     </div>
