--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="short-intro">
               <p>
-                I am a Chattogram based web developer who specializes in building websites that gives
+                I am a Chattogram-based web developer who specializes in building websites that give
                 user-friendly interfaces. I mainly develop websites using PHP and Laravel Framework.
               </p>
             </div>
@@ -111,15 +111,15 @@
               <div class="about">
                 <h4>A Little About Me</h4>
                 <p>Hey, I am Israt. I have completed my graduation on <strong>CSE</strong>(Computer Science &
-                  Engingeering)
+                  Engineering)
                   from <strong>International Islamic University Chittagong</strong>. I am a web developer with a passion
                   for
-                  front-end design, but I am compatable with both designing and development.</p>
-                <p>For my practice, I have re-designed several websites, and for interface design concept, I prefer using
+                  front-end design, but I am compatible with both design and development.</p>
+                <p>For my practice, I have re-designed several websites, and for interface design concepts, I prefer using
                   the templates from
-                  Themeforest, Figma, Jutinmind and others.</p>
-                <p>Few months ago, I have completed a Govt. funded course from BITM, on PHP with Laravel
-                  Framework. Currently my focus is to get involved with the projects that are built on Laravel framework.
+                  Themeforest, Figma, Jutinmind, and others.</p>
+                <p> a Few months ago, I completed a Govt. funded course from BITM, on PHP with Laravel
+                  Framework. Currently, my focus is to get involved with projects that are built on the Laravel framework.
                 </p>
               </div>
             </section>
@@ -157,10 +157,9 @@
                   DEVELOPMENT
                 </div>
                 <div class="service-descp">
-                  <P>Design isn't just what a product looks like and feels like on the outside.
-                    Design encompasses the internal functionality of a product as well as the overall user
-                    experience. I strive to design interfaces and experiences that people can enjoy on all
-                    digital mediums. </P>
+                  <P>Designing isn't the whole process of a web application. For Development I have learned the traditional method 
+                  at first, which was encompassed by PHP and MySQL. But nowadays, these traditional methods are outdated. As a result, I have learned
+                  Laravel Framework. It's very popular nowadays. </P>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -171,10 +170,11 @@
                   PRACTISING
                 </div>
                 <div class="service-descp">
-                  <P>Design isn't just what a product looks like and feels like on the outside.
-                    Design encompasses the internal functionality of a product as well as the overall user
-                    experience. I strive to design interfaces and experiences that people can enjoy on all
-                    digital mediums. </P>
+                  <P>Initially Front end designing was fun. But As I started doing complicated projects, 
+                  I get stuck daily. No matter what after learning everything at some point I 
+                  I get stuck daily. No matter what after learning everything at some point I 
+                  realized that making projects is important. I can check 
+                  how HTML and CSS work together to design a beautiful frontend application.</P>
                 </div>
               </div>
             </div>
@@ -192,7 +192,7 @@
             <div class="col-sm-5">
               <h6>&rarr; Things I Have Experience On</h6>
               <p>I've been doing web development for more than 3 years.
-                I always try to keep up the with the pace of advanced technologies.</p>
+                I always try to keep up with the pace of advanced technologies.</p>
               <div class="technologies">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
@@ -222,8 +222,8 @@
                           </div>
   
                           <div class="page-descp">
-                            <p>A furnite website landing page. Users can view
-                              products details, client reviews and others.</p>
+                            <p>A furniture website landing page. Users can view
+                            product details, client reviews, and others. It's designed from Figma.</p>
                           </div>
                         </div>
                       </div>
@@ -247,8 +247,8 @@
   
                           <div class="page-descp">
                             <p>A travel booking website landing page. Users can view
-                              tourist destination details, client reviews and others. Some amazing examples of travel websites are 
-                              collected from the global community of designers.</p>
+                            tourist destination details and client reviews. Some amazing ideas are 
+                            collected from the global community of designers. It's designed from Figma.</p>
                           </div>
                         </div>
                       </div>
@@ -270,8 +270,9 @@
                         </div>
   
                         <div class="page-descp">
-                          <p>A furnite website landing page. Users can view
-                            products details, client reviews and others.</p>
+                          <p>A Employee Management System Web Application Landing Page. 
+                          Also, there is a vacancy announcement system. This website may serve both purposes. 
+                            It was designed for one of my university courses.</p>
                         </div>
                       </div>
                     </div>
@@ -292,8 +293,8 @@
                           </div>
   
                           <div class="page-descp">
-                            <p>A furnite website landing page. Users can view
-                              products details, client reviews and others.</p>
+                            <p>A Blogging Page Website. It's mainly the landing page. This website is 
+                              mainly a remake of the <strong>HerPaperRoute</strong> website.</p>
                           </div>
                         </div>
                       </div>
