--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 </head>
 
 <body>
-
+<section id="page-top">
+        </section>
   <header>
     <section>
 
+      
       <!--Nav Bar-->
       <div class="nav-bar">
         <div class="row">
