--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     Contact</a>
                 </li>
                 <li class="nav-item">
-                  <button><a class="nav-link" href="israt_resume.pdf">Resume</a></button>
+                  <button><a class="nav-link" href="Israt_Jahan_CV.pdf">Resume</a></button>
                 </li>
               </ul>
             </div>
