--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
           </div>
           <div class="social-media">
             <ul>
-              <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+              <li><a href="https://www.facebook.com/israt.nodi.3"><i class="fa-brands fa-facebook-f"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/israt-jahan-b608531b2/"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+              <li><a href="https://github.com/Israt-svg"><i class="fa-brands fa-github"></i></a></li>
             </ul>
           </div>
         </div>
