--- a/index.html
+++ b/index.html
@@ -209,6 +209,30 @@
             <div class="col-sm-7">
               <div class="my-projects">
                 <h6>&rarr; Projects I Have Worked On</h6>
+
+                <div class="project">
+                  <a href="https://israt-svg.github.io/FreshSip/">
+                    <div class="card" style="width: 100%; background-color: transparent; color: white; padding: 10px;">
+                      <div class="row">
+                        <div class="col-sm-4">
+                          <img src="img/journey_jurnals.jpg" alt="" width="100%" style="border-radius: 5px;">
+                        </div>
+                        <div class="col-sm-8">
+                          <div class="page-heading">
+                            <h5>FreshSip - A Fruits and Vegetable items related Website
+                              &#8599;</h5>
+                          </div>
+  
+                          <div class="page-descp">
+                            <p>It's a fruits and vegetables-related website. This website is completely designed by me.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+  
+                
                 <div class="project">
                   <a href="https://israt-svg.github.io/panto_furniture_website/">
                     <div class="card" style="width: 100%; background-color: transparent; color: white; padding: 10px;">
