--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div class="card" style="width: 100%; background-color: transparent; color: white; padding: 10px;">
                       <div class="row">
                         <div class="col-sm-4">
-                          <img src="img/journey_jurnals.jpg" alt="" width="100%" style="border-radius: 5px;">
+                          <img src="img/FreshSip.png" alt="" width="100%" style="border-radius: 5px;">
                         </div>
                         <div class="col-sm-8">
                           <div class="page-heading">
